[tck] fix navbar z-index

--- a/frontend/src/css/Navbar.css
+++ b/frontend/src/css/Navbar.css
@@ -8,6 +8,7 @@
     transition: all .7s ease-in;
     background-color: var(--theme-extra-light);
     position: relative;
+    z-index: 1;
     /* border-bottom: var(--theme-dark-purple) solid 4px; */
 }
 
